--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Elegant Jewelry - Sklep z Biżuterią</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fafafa;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #f5f0e6;
+      padding: 20px;
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 700;
+      color: #b8860b; /* złoty kolor */
+      letter-spacing: 2px;
+    }
+    main {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 0 15px;
+    }
+    .products {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .product {
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(184, 134, 11, 0.15);
+      width: 260px;
+      padding: 15px;
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+    .product:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(184, 134, 11, 0.3);
+    }
+    .product img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 6px;
+      margin-bottom: 10px;
+    }
+    .product h3 {
+      margin: 10px 0 5px;
+      font-weight: 600;
+      color: #b8860b;
+    }
+    .product p {
+      font-size: 0.9rem;
+      color: #555;
+      min-height: 40px;
+    }
+    .product .price {
+      font-weight: 700;
+      color: #b8860b;
+      margin-top: 8px;
+      font-size: 1.1rem;
+    }
+    section.about,
+    section.contact {
+      margin-top: 50px;
+      background: white;
+      padding: 25px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(184, 134, 11, 0.1);
+    }
+    section.about h2,
+    section.contact h2 {
+      color: #b8860b;
+      margin-bottom: 15px;
+    }
+    .contact form {
+      display: flex;
+      flex-direction: column;
+      max-width: 400px;
+    }
+    .contact label {
+      margin: 8px 0 4px;
+      font-weight: 600;
+    }
+    .contact input,
+    .contact textarea {
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    .contact textarea {
+      resize: vertical;
+      min-height: 80px;
+    }
+    .contact button {
+      margin-top: 15px;
+      background-color: #b8860b;
+      color: white;
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      font-weight: 700;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .contact button:hover {
+      background-color: #9c7007;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #f5f0e6;
+      color: #b8860b;
+      margin-top: 50px;
+      font-size: 0.9rem;
+    }
+    @media (max-width: 600px) {
+      .products {
+        flex-direction: column;
+        align-items: center;
+      }
+      .product {
+        width: 90%;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>Elegant Jewelry</header>
+  <main>
+    <section class="products">
+      <article class="product">
+        <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?auto=format&fit=crop&w=400&q=80" alt="Naszyjnik Aurora" />
+        <h3>Naszyjnik Aurora</h3>
+        <p>Delikatny naszyjnik z pozłacanego srebra z kryształkiem Swarovskiego.</p>
+        <div class="price">129 zł</div>
+      </article>
+      <article class="product">
+        <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?auto=format&fit=crop&w=400&q=80" alt="Bransoletka Luna" />
+        <h3>Bransoletka Luna</h3>
+        <p>Elegancka bransoletka z naturalnym kamieniem księżycowym.</p>
+        <div class="price">99 zł</div>
+      </article>
+      <article class="product">
+        <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=400&q=80" alt="Kolczyki Stella" />
+        <h3>Kolczyki Stella</h3>
+        <p>Kolczyki w kształcie gwiazdek z drobnymi diamentami.</p>
+        <div class="price">149 zł</div>
+      </article>
+    </section>
 
+    <section class="about">
+      <h2>O nas</h2>
+      <p>Elegant Jewelry to butikowa marka oferująca unikatową biżuterię wykonaną ręcznie z najwyższą starannością. Wierzymy, że każda kobieta zasługuje na wyjątkowe dodatki, które podkreślają jej indywidualność.</p>
+    </section>
+
+    <section class="contact">
+      <h2>Kontakt</h2>
+      <form>
+        <label for="name">Imię i nazwisko</label>
+        <input type="text" id="name" name="name" placeholder="Twoje imię i nazwisko" required />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Twój email" required />
+        <label for="message">Wiadomość</label>
+        <textarea id="message" name="message" placeholder="Napisz do nas..." required></textarea>
+        <button type="submit">Wyślij</button>
+      </form>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 Elegant Jewelry. Wszelkie prawa zastrzeżone.
+  </footer>
+</body>
+</html>
