--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       color: #333;
       margin: 0;
       padding: 0;
+      overflow-x: hidden;
     }
     header {
       background-color: #f5f0e6;
@@ -31,6 +32,10 @@
       gap: 20px;
       flex-wrap: wrap;
       justify-content: center;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s forwards;
+      animation-delay: 0.3s;
     }
     .product {
       background: white;
@@ -40,6 +45,7 @@
       padding: 15px;
       text-align: center;
       transition: transform 0.2s ease;
+      cursor: default;
     }
     .product:hover {
       transform: scale(1.05);
@@ -69,15 +75,29 @@
       font-size: 1.1rem;
     }
     section.about,
-    section.contact {
+    section.contact,
+    section.reviews {
       margin-top: 50px;
       background: white;
       padding: 25px;
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(184, 134, 11, 0.1);
+      opacity: 0;
+      transform: translateY(20px);
+      animation: fadeInUp 1s forwards;
+    }
+    section.about {
+      animation-delay: 0.5s;
+    }
+    section.contact {
+      animation-delay: 0.7s;
+    }
+    section.reviews {
+      animation-delay: 0.6s;
     }
     section.about h2,
-    section.contact h2 {
+    section.contact h2,
+    section.reviews h2 {
       color: #b8860b;
       margin-bottom: 15px;
     }
@@ -123,6 +143,83 @@
       margin-top: 50px;
       font-size: 0.9rem;
     }
+
+    /* Animacja fadeInUp */
+    @keyframes fadeInUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Opinie - slider */
+    .reviews {
+      position: relative;
+      overflow: hidden;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .reviews-container {
+      display: flex;
+      transition: transform 0.4s ease;
+      will-change: transform;
+    }
+    .review {
+      background: #fff8e1;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(184, 134, 11, 0.2);
+      padding: 20px;
+      margin: 0 10px;
+      flex: 0 0 100%;
+      box-sizing: border-box;
+      min-height: 140px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-style: italic;
+      color: #5a4300;
+    }
+    .review p {
+      margin: 0 0 10px;
+      font-size: 1.1rem;
+      line-height: 1.4;
+    }
+    .review .author {
+      font-weight: 700;
+      text-align: right;
+      color: #b8860b;
+      font-style: normal;
+    }
+    .reviews-buttons {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+    .reviews-buttons button {
+      background: #b8860b;
+      border: none;
+      color: white;
+      font-size: 1.5rem;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      cursor: pointer;
+      pointer-events: auto;
+      transition: background-color 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+    }
+    .reviews-buttons button:hover {
+      background-color: #9c7007;
+    }
+
     @media (max-width: 600px) {
       .products {
         flex-direction: column;
@@ -130,6 +227,9 @@
       }
       .product {
         width: 90%;
+      }
+      .review {
+        margin: 0 5px;
       }
     }
   </style>
@@ -163,6 +263,28 @@
       <p>Elegant Jewelry to butikowa marka oferująca unikatową biżuterię wykonaną ręcznie z najwyższą starannością. Wierzymy, że każda kobieta zasługuje na wyjątkowe dodatki, które podkreślają jej indywidualność.</p>
     </section>
 
+    <section class="reviews">
+      <h2>Opinie klientów</h2>
+      <div class="reviews-container">
+        <div class="review">
+          <p>"Piękna biżuteria, która idealnie pasuje na każdą okazję. Obsługa na najwyższym poziomie!"</p>
+          <div class="author">- Anna K.</div>
+        </div>
+        <div class="review">
+          <p>"Szybka wysyłka i cudowna jakość wykonania. Polecam z całego serca!"</p>
+          <div class="author">- Marta W.</div>
+        </div>
+        <div class="review">
+          <p>"Znalazłam tu idealny prezent dla mamy. Na pewno wrócę po więcej."</p>
+          <div class="author">- Katarzyna M.</div>
+        </div>
+      </div>
+      <div class="reviews-buttons">
+        <button id="prev" aria-label="Poprzednia opinia">&#8249;</button>
+        <button id="next" aria-label="Następna opinia">&#8250;</button>
+      </div>
+    </section>
+
     <section class="contact">
       <h2>Kontakt</h2>
       <form>
@@ -179,5 +301,35 @@
   <footer>
     &copy; 2025 Elegant Jewelry. Wszelkie prawa zastrzeżone.
   </footer>
+
+  <script>
+    const reviewsContainer = document.querySelector('.reviews-container');
+    const reviews = document.querySelectorAll('.review');
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
+
+    let currentIndex = 0;
+
+    function updateSlider() {
+      const width = reviews[0].offsetWidth + 20; // review width + margin both sides approx.
+      reviewsContainer.style.transform = `translateX(-${currentIndex * width}px)`;
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + reviews.length) % reviews.length;
+      updateSlider();
+    });
+
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % reviews.length;
+      updateSlider();
+    });
+
+    // On window resize, update transform to adjust width
+    window.addEventListener('resize', updateSlider);
+
+    // Initial position
+    updateSlider();
+  </script>
 </body>
 </html>
